# ros2-ur-sim-with-ft

./: .gitignore  README.MD  err.txt  generated_urdf.xml  params_1.yaml
.github/: pull_request_template.md
install/: local_setup.sh  setup.sh
install/ur_description/share/ament_index/resource_index/package_run_dependencies/: ur_description
install/ur_description/share/ament_index/resource_index/parent_prefix_path/: ur_description
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_description/share/ur_description/cmake/: ur_descriptionConfig-version.cmake  ur_descriptionConfig.cmake
install/ur_description/share/ur_description/config/: initial_positions.yaml
install/ur_description/share/ur_description/environment/: ament_prefix_path.dsv  path.dsv
install/ur_description/share/ur_description/launch/: view_ur.launch.py
install/ur_description/share/ur_description/rviz/: view_robot.rviz
install/ur_description/share/ur_description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
install/ur_description/share/ur_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_simulation_gz/share/ur_simulation_gz/cmake/: ur_simulation_gzConfig-version.cmake  ur_simulation_gzConfig.cmake
install/ur_simulation_gz/share/ur_simulation_gz/config/: ur_controllers.yaml
install/ur_simulation_gz/share/ur_simulation_gz/environment/: ament_prefix_path.dsv  path.dsv
install/ur_simulation_gz/share/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/ur_description/share/ur_description/: local_setup.sh  package.sh
src/install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.sh  package.sh
src/log/: latest_build
src/trajectory_smoother_service/: CMakeLists.txt  README.md  gpt.txt  package.xml
src/trajectory_smoother_service/config/: smoother_parameters.yaml
src/trajectory_smoother_service/launch/: smoother_launch.py  smoother_solo.launch.py  smoother_with_moveit.launch.py
src/trajectory_smoother_service/scripts/: ompl_integration_example.py  test_smoother_client.py  trajectory_smoother_client.py
src/trajectory_smoother_service/src/: simple_trajectory_smoother_node.cpp  trajectory_smoother_node.cpp
src/trajectory_smoother_service/srv/: SmoothTrajectory.srv
src/ur_description/config/: initial_positions.yaml
src/ur_description/urdf/: ur.ros2_control.xacro  ur_macro.xacro
src/ur_simulation_gz/ur_simulation_gz/: CMakeLists.txt
src/ur_simulation_gz/ur_simulation_gz/config/: ur_controllers.yaml
src/ur_simulation_gz/ur_simulation_gz/launch/: ur_sim_control.launch.py
src/ur_simulation_gz/ur_simulation_gz/world/: empty_ft.sdf  empty_with_ft.sdf
tmp/: frames_2025-08-11_02.23.26.gv  frames_2025-08-11_02.25.43.gv  ft_patch.xml  ft_sensor_sdf.xml  my_empty.sdf  ur5e_base.sdf  ur5e_base.urdf  ur5e_with_ft.urdf
(+178 files in other folders)
